--- a/src/index.css
+++ b/src/index.css
@@ -5,19 +5,20 @@ Variables
 */
 
 :root {
-	/* dark shades of primary color*/
-	--clr-primary-1: hsl(184, 91%, 17%);
-	--clr-primary-2: hsl(185, 84%, 25%);
-	--clr-primary-3: hsl(185, 81%, 29%);
-	--clr-primary-4: hsl(184, 77%, 34%);
+	/* dark shades of primary color (mint, slightly darker) */
+	--clr-primary-1: hsl(155, 44%, 15%);
+	--clr-primary-2: hsl(155, 46%, 23%);
+	--clr-primary-3: hsl(155, 48%, 27%);
+	--clr-primary-4: hsl(155, 50%, 32%);
 	/* primary/main color */
-	--clr-primary-5: hsl(185, 62%, 45%);
+	--clr-primary-5: #2da975;
 	/* lighter shades of primary color */
-	--clr-primary-6: hsl(185, 57%, 50%);
-	--clr-primary-7: hsl(184, 65%, 59%);
-	--clr-primary-8: hsl(184, 80%, 74%);
-	--clr-primary-9: hsl(185, 94%, 87%);
-	--clr-primary-10: hsl(186, 100%, 94%);
+	--clr-primary-6: hsl(155, 60%, 47%);
+	--clr-primary-7: hsl(155, 62%, 56%);
+	--clr-primary-8: hsl(155, 64%, 72%);
+	--clr-primary-9: hsl(155, 66%, 86%);
+	--clr-primary-10: hsl(155, 68%, 93%);
+
 	/* darkest grey - used for headings */
 	--clr-grey-1: hsl(209, 61%, 16%);
 	--clr-grey-2: hsl(211, 39%, 23%);
@@ -51,6 +52,7 @@ Global Styles
 }
 html {
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 body {
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -59,6 +61,7 @@ body {
 	color: var(--clr-grey-1);
 	line-height: 1.5;
 	font-size: 0.875rem;
+	overflow-x: hidden;
 }
 ul {
 	list-style-type: none;
