--- a/src/assets/css/Hero.module.scss
+++ b/src/assets/css/Hero.module.scss
@@ -1,7 +1,8 @@
+@use "./_mixins.scss" as m;
 .hero {
 	min-height: 100vh;
 	width: 100%;
-	background: linear-gradient(rgb(44, 174, 186, 0.7), rgba(0, 0, 0, 0.7)),
+	background: linear-gradient(rgb(44 174 186 / 70%), rgba(0, 0, 0, 0.7)),
 		url("../images/main.jpeg") center/cover no-repeat;
 	display: flex;
 	justify-content: center;
@@ -11,53 +12,57 @@
 	text-align: center;
 	color: var(--clr-white);
 	padding: 0 3rem;
-}
-.hero-banner h1 {
-	text-transform: uppercase;
-}
-.hero-banner p {
-	max-width: 35rem;
-	margin-left: auto;
-	margin-right: auto;
-	color: var(--clr-white);
-	letter-spacing: var(--spacing);
+	> h1 {
+		text-transform: uppercase;
+	}
+	> p {
+		max-width: 35rem;
+		margin-left: auto;
+		margin-right: auto;
+		color: var(--clr-white);
+		letter-spacing: var(--spacing);
+	}
 }
 .hero-btn {
 	padding: 0.9rem 1.6rem;
 	font-size: 1.25rem;
 	background: var(--clr-white);
 	color: var(--clr-primary-5);
+	&:hover {
+		background: transparent;
+		color: var(--clr-white);
+		border-color: var(--clr-white);
+	}
+	&:focus-visible {
+		@include m.focus-ring();
+	}
 }
 
 /* XS Mobile adjustments (320px) */
 @media screen and (max-width: 375px) {
 	.hero-banner {
 		padding: 0 1rem;
-	}
-	.hero-banner h1 {
-		font-size: 1.8rem;
-		line-height: 1.2;
-	}
-	.hero-banner p {
-		font-size: 0.8rem;
-		line-height: 1.4;
-		letter-spacing: 0.05rem;
+		> h1 {
+			font-size: 1.8rem;
+			line-height: 1.2;
+		}
+		> p {
+			font-size: 0.8rem;
+			line-height: 1.4;
+			letter-spacing: 0.05rem;
+		}
 	}
 	.hero-btn {
 		padding: 0.7rem 1.2rem;
 		font-size: 1rem;
 	}
 }
-.hero-btn:hover {
-	background: transparent;
-	color: var(--clr-white);
-	border-color: var(--clr-white);
-}
+
 @media screen and (min-width: 768px) {
 	.hero-banner {
 		padding: 0;
-	}
-	.hero-banner p {
-		max-width: 45rem;
+		> p {
+			max-width: 45rem;
+		}
 	}
 }
