--- a/src/index.scss
+++ b/src/index.scss
@@ -166,10 +166,10 @@ p {
 	border: 2px solid transparent;
 	cursor: pointer;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-}
-.btn:hover {
-	color: var(--clr-primary-1);
-	background: var(--clr-primary-8);
+	&:hover {
+		color: var(--clr-primary-1);
+		background: var(--clr-primary-8);
+	}
 }
 /* section */
 .section {
@@ -179,12 +179,12 @@ p {
 .section-title {
 	text-align: center;
 	margin-bottom: 4rem;
-}
-.section-title h2 {
-	text-transform: uppercase;
-}
-.section-title span {
-	color: var(--clr-primary-5);
+	> h2 {
+		text-transform: uppercase;
+	}
+	> span {
+		color: var(--clr-primary-5);
+	}
 }
 .section-center {
 	width: 90vw;
